<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb5-ground-robot</name>
  <version>1.0.0</version>
  <description>RB5 ground-based mobile robot ROS2 package that implements the communication with a base station using either the IEEE 802.11 wireless communication or long-range LoRa technology. The package further contains serial communication with the microcontroller implemented in Arduino and the vertices detection.</description>
  <maintainer email="adam.seewald@yale.edu">Adam Seewald</maintainer>
  <license>CC BY-NC-SA</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
